Created landing page

--- a/resources/scss/config/default/app.scss
+++ b/resources/scss/config/default/app.scss
@@ -115,6 +115,7 @@ File: Main Css File
 @import "../../pages/email";
 @import "../../pages/kanban";
 @import "../../pages/landing";
+@import "../../pages/brt-landing";
 @import "../../pages/nft-landing";
 @import "../../pages/file-manager";
 @import "../../pages/to-do";
