--- a/resources/scss/structure/_page-head.scss
+++ b/resources/scss/structure/_page-head.scss
@@ -4,10 +4,12 @@
 
 .page-title-box {
     padding: 10px $grid-gutter-width;
-    background-color: var(--#{$prefix}secondary-bg);
-    box-shadow: var(--#{$prefix}page-title-box-shadow);
-    border-bottom: 1px solid var(--#{$prefix}page-title-border);
+    background-color: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(10px);
+    box-shadow: none;
+    border-bottom: none;
     margin: -23px (-$grid-gutter-width * 1) $grid-gutter-width (-$grid-gutter-width * 1);
+    border-radius: 8px;
 
     .breadcrumb {
         background-color: transparent;
