--- a/resources/scss/components/_library-modal.scss
+++ b/resources/scss/components/_library-modal.scss
@@ -207,6 +207,85 @@
         }
     }
 }
+.create-purchase-form {
+    width: 100%;
+    padding: 0.8rem 1rem 0.8rem 0.8rem;
+    border: 1px solid #e9ecef;
+    border-radius: 10px;
+    font-size: 1rem;
+    transition: all 0.3s ease;
+    background-color: white;
+
+    &:focus {
+        outline: none;
+        border-color: #2e8b57;
+        box-shadow: 0 0 0 3px rgba(46, 139, 87, 0.1);
+    }
+
+    &.input-error {
+        border-color: #e74c3c;
+
+        &:focus {
+            box-shadow: 0 0 0 3px rgba(231, 76, 60, 0.1);
+        }
+    }
+
+    &.textarea-control {
+        resize: vertical;
+        min-height: 90px;
+        line-height: 1.5;
+        font-family: inherit;
+    }
+
+    &.color-input {
+        padding: 0.5rem 0.75rem 0.5rem 2.5rem;
+        height: 42px;
+    }
+}
+
+.textarea-icon {
+    top: 1rem;
+    transform: none;
+}
+
+/* Checkbox Wrapper */
+.checkbox-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 0.75rem;
+}
+
+.checkbox-label {
+    font-size: 0.95rem;
+    color: #2c3e50;
+    font-weight: 500;
+}
+
+/* Toggle Switch */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 50px;
+    height: 26px;
+
+    input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+
+        &:checked + .slider {
+            background-color: #2e8b57;
+        }
+
+        &:checked + .slider:before {
+            transform: translateX(24px);
+        }
+
+        &:focus + .slider {
+            box-shadow: 0 0 0 3px rgba(46, 139, 87, 0.1);
+        }
+    }
+}
 
 .slider {
     position: absolute;
