--- a/resources/scss/config/default/app.scss
+++ b/resources/scss/config/default/app.scss
@@ -44,6 +44,7 @@ File: Main Css File
 @import "../../components/scrollspy";
 @import "../../components/library-modal";
 @import "../../components/library-index";
+@import "../../components/inventory-index";
 @import "../../components/footer-glass";
 @import "../../components/navigation-modern";
 
