--- a/resources/scss/components/_library-modal.scss
+++ b/resources/scss/components/_library-modal.scss
@@ -44,6 +44,10 @@
     &.modal-lg {
         max-width: 700px;
     }
+
+    &.modal-xl {
+        max-width: 1200px;
+    }
 }
 
 /* Modal Header */
